# gitlab_summary

./: .env.example  LICENSE  README.md  pyproject.toml
src/gitlab_summary/: __init__.py  config.py  data_models.py  event_processor.py  gitlab_client.py  logging_setup.py  main.py  openai_client.py  summary_generator.py
tests/: test_gitlab_client.py  test_openai_client.py  test_summary_generator.py
